manifests-failed/cluster-registry-0.2.12.tgz-manifest.yaml
---
# Source: cluster-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-cluster-registry-controller
  namespace: cluster-registry-0.2.12.tgz
  labels:
    
    app: my-release-cluster-registry-controller
    app.kubernetes.io/name: cluster-registry-controller
    helm.sh/chart: cluster-registry-0.2.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: v0.2.12
    app.kubernetes.io/component: cluster-registry-controller
    app.kubernetes.io/part-of: cluster-registry
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: http-metrics
    - port: 443
      targetPort: http-cl-val-wh
      protocol: TCP
      name: http-cl-val-wh
  selector:
    app.kubernetes.io/name: cluster-registry-controller
    app.kubernetes.io/instance: my-release
---
# Source: cluster-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-cluster-registry-controller
  namespace: cluster-registry-0.2.12.tgz
  labels:
    
    app: my-release-cluster-registry-controller
    app.kubernetes.io/name: cluster-registry-controller
    helm.sh/chart: cluster-registry-0.2.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: v0.2.12
    app.kubernetes.io/component: cluster-registry-controller
    app.kubernetes.io/part-of: cluster-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cluster-registry-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
      labels:
        
        app: my-release-cluster-registry-controller
        app.kubernetes.io/name: cluster-registry-controller
        helm.sh/chart: cluster-registry-0.2.12
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: v0.2.12
        app.kubernetes.io/component: cluster-registry-controller
        app.kubernetes.io/part-of: cluster-registry
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: my-release-cluster-registry-controller
      containers:
        - name: manager
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          image: "ghcr.io/cisco-open/cluster-registry-controller:v0.2.12"
          imagePullPolicy: IfNotPresent
          command:
            - /manager
          args:
            - "--cluster-validator-webhook-enabled=true"
            - "--cluster-validator-webhook-name=my-release-cluster-registry-controller-cluster-validator-webhook"
            - "--cluster-validator-webhook-port=9443"
            - "--cluster-validator-webhook-certificate-directory=/tmp/webhooks/clusterValidator/certificates"
          ports:
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: health
              containerPort: 8090
              protocol: TCP
            - containerPort: 9443
              name: http-cl-val-wh
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 150Mi
---
# Source: cluster-registry/templates/cluster-validator-vwhc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "my-release-cluster-registry-controller-cluster-validator-webhook"
  namespace: cluster-registry-0.2.12.tgz
webhooks:
- name: cluster-validator.clusterregistry.k8s.cisco.com
  clientConfig:
    service:
      name: "my-release-cluster-registry-controller"
      namespace: cluster-registry-0.2.12.tgz
      path: /validate-cluster
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  rules:
  - apiGroups:
      - clusterregistry.k8s.cisco.com
    apiVersions:
      - v1alpha1
    operations:
      - CREATE
      - UPDATE
    resources:
      - clusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
  admissionReviewVersions:
    - v1
